# lza-diff-log-analyzer

./: .gitignore  README.md  integration_test.py  pyproject.toml  test_final.py  test_final_simplified_report.html  test_simplified_report.html  test_typing.py
config/: llm_config.yaml  resource_categorization.yaml
docs/: ARCHITECTURE.md  COMPONENT_GUIDE.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_FLOWS.md
lza_diff_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/analyzers/: analysis_engine.py  base.py  compliance_analyzer.py  iam_semantic_analyzer.py  network_analyzer.py  operational_analyzer.py  security_analyzer.py
src/cli/: analysis_runner.py  simple_main.py
src/core/: errors.py
src/formatters/: __init__.py  admin_friendly.py  streaming.py
src/interactive/: __init__.py  session.py  simple_session.py
src/llm/: base.py  config.py  conversation_manager.py  ollama_client.py
src/models/: diff_models.py
src/parsers/: diff_parser.py  enhanced_iam_parser.py  file_utils.py
src/prompts/: iam_analysis_prompts.py
src/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  langchain_rag.py  vector_store.py
src/reports/: report_generator.py
tests/: test_diff_parser.py  test_file_utils.py  test_models.py
